# mcp-course

./: .env  .gitignore  COURSE_RESOURCES.md  mcp_client.py  pyproject.toml  tool_calling.ipynb
binance_mcp/: binance_mcp.py
binance_mcp_reference_implementation/: binance_mcp_w_prompt.py  binance_mcp_w_resource.py
langgraph/: price_graph.py
ref-my-cloudflare-mcp-server-public/: package-lock.json
ref-my-cloudflare-mcp-server-secure/: package-lock.json  wrangler.jsonc
ref_openai_mcp/: function_calling.py  mcp_with_openai_agent.py
typescript_mcp/: mcp-definition.json  mcp-demo-1.0.0.tgz  package-lock.json  package.json  zoltanctoth-binancemcp-ts-1.1.1.tgz  zoltanctoth-binancemcp-ts-1.1.4.tgz  zoltanctoth-binancemcp-ts-1.1.5.tgz
typescript_mcp/package/: MCP_USAGE.md  README.md  package.json
typescript_mcp/package/package/: package.json
typescript_mcp/src/: binance_mcp.ts  server.ts
